--- a/kek_menu_stuff/kekMenuLibs/Languages/Arabic.txt
+++ b/kek_menu_stuff/kekMenuLibs/Languages/Arabic.txt
@@ -614,3 +614,4 @@ Downwards §ﺖﺤﺗ
 Stretch §ﺩﺪﻤﻧ
 Type in stretch §ﺩﺪﻤﺘﻟﺍ ﺐﺘﻛﺍ
 Atomize §Atomize
+This feature doesn't work on yourself. §.ﻚﺴﻔﻧ ﻰﻠﻋ ﻞﻐﺘﺸﻳﺎﻣ ﺭﺎﻴﺨﻟﺍ ﺍﺬﻫ
